# Art32

Emulator/: Cargo.toml
Emulator/assets/fonts/: generate-atlas.ps1
Emulator/assets/fonts/FiraCode/: FiraCode-Regular.json
Emulator/assets/shaders/: text.wgsl
Emulator/kernel/: art32.asm  env.asm  kernel.asm  ports.asm
Emulator/proptest-regressions/cpu/tests/: instruction.txt
Emulator/src/: cpu.rs  display.rs  main.rs  memory.rs  system.rs
Emulator/src/cpu/: interface.rs  register.rs  tests.rs
Emulator/src/cpu/tests/: instruction.rs
Emulator/src/display/: buffer.rs  math.rs  text.rs
Emulator/src/display/text/: atlas.rs
Simulation/: .gitignore  Cargo.toml  build.rs
Simulation/src/: main.rs  tests.rs
Simulation/src/tests/: adder.rs  alu.rs  div.rs  fetch_unit.rs  fpu.rs  program_counter.rs
Simulation/tests/: adder.qrz  alu.qrz  div.qrz  fetch_unit.qrz  fpu.qrz  program_counter.qrz
Softcore/: adder.qrz  alu.qrz  art32.qrz  clz.qrz  condition_unit.qrz  cpu.qrz  data_swizzle.qrz  ddr.v  div.qrz  dvi.qrz  fdiv.qrz  fetch_unit.qrz  fifo.qrz  flag_register.qrz  float.qrz  fpu.qrz  globals.qrz  immediate_decoder.qrz  instruction_decoder.qrz  kernel_ram.v  led_controller.qrz  mmu.qrz  mult.qrz  mult16.v  pll.v  program_counter.qrz  register_file.qrz  serial_controller.qrz  sram_interface.qrz  sync_generator.qrz  tmds_encoder.v  uart.v  vdp.qrz  video_ram.qrz
